# test_snapshottest

./: README.rst  pyproject.toml
tests/: test1.py
tests/data/: iris_info.csv
tests/snapshots/: snap_test1.py
