[tool.poetry]
name = "test_snapshottest"
version = "0.1.0"
description = ""
authors = ["Ito Hirotake <itouhrtk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.1"
snapshottest = "^0.5.1"
ipython = "^7.15.0"
pytest = "^6.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
